--- a/lflists/Rush-Prerelease.new.lflist.conf
+++ b/lflists/Rush-Prerelease.new.lflist.conf
@@ -1562,6 +1562,7 @@ $whitelist
 160439008 3 --Soitsu (Rush)
 160439009 3 --Dragon Bird
 160439010 3 --Legendary Sword (Rush)
+160440004 3 --Dragon Tribe Fusion
 160441003 3 --Eternal Galactica Oblivion
 160442001 3 --Ruthless Slash - Megaplunder
 160443001 3 --Sevens Road Magician
@@ -1572,11 +1573,23 @@ $whitelist
 160443006 3 --Blue-Tooth Burst Dragon
 160443007 3 --Cocosh the Spellcaster of Happiness
 # Prereleases
+160014009 3 --Chemispet Nyanko
+160014010 3 --Chemispet Wanko
+160014011 3 --Melt the Aqueous Spirit
+160014012 3 --Bolt the Conduction Spirit
+160014013 3 --Hot the Combustion Spirit
+160014014 3 --Hyper Assistant Achi
+160014015 3 --Blazebolt Chemistorm Fenghuang Volcalize Phoenix [L]
+160014016 3 --Blazebolt Chemistorm Fenghuang Volcalize Phoenix
+160014017 3 --Blazebolt Chemistorm Fenghuang Volcalize Phoenix [R]
+160014048 3 --Volcalize Compound
+160014049 3 --Chemicalize Structure Force
 160208001 3 --Harpie Ladies [L]
 160208002 3 --Harpie Ladies
 160208003 3 --Harpie Ladies [R]
 160208004 3 --Harpie Lady 1 (Rush)
 160208005 3 --Harpie Lady 2 (Rush)
+160208006 3 --Harpie Lady 3 (Rush)
 160208008 3 --Harpie Regina
 160208009 3 --Harpie Carla
 160208010 3 --Harpie's Pet Dragon (Rush)
@@ -1675,39 +1688,110 @@ $whitelist
 160434005 3 --Magic Cylinder (Rush)
 160436005 3 --Widespread Ruin (Rush)
 160437001 3 --Widespread Ruin (Rush)
-160440001 3 --Buster Blader (Rush)
-160440002 3 --Recurring Nightmare (Rush)
-160440003 3 --Summoned Skull (Rush)
+160444006 3 --Fireyarou
+160444008 3 --Gravity Plus Dragon
+160444010 3 --Three Cavalteers
 # Prerelease Legends
 160208063 3 --Phantasm Spiral Dragon (Rush)
 160208064 3 --Raiza the Storm Monarch (Rush)
 160208065 3 --Icarus Attack (Rush)
 160429002 3 --Thestalos the Firestorm Monarch (Rush)
-# Unknown Until 2023-06-18
-# Godbreath Wing
-160208006 3 --Unknown
-160208007 3 --Unknown
-160208011 3 --Unknown
-160208015 3 --Unknown
-160208017 3 --Unknown
-160208021 3 --Unknown
-160208023 3 --Unknown
-160208026 3 --Unknown
-160208028 3 --Unknown
-160208029 3 --Unknown
-160208030 3 --Unknown
-160208032 3 --Unknown
-160208044 3 --Unknown
-160208045 3 --Unknown
-160208049 3 --Unknown
-160208050 3 --Unknown
-160208054 3 --Unknown
-160208055 3 --Unknown
-160208056 3 --Unknown
-160208059 3 --Unknown
-160208060 3 --Unknown
-160208061 3 --Unknown
-160208062 3 --Unknown
+160440001 3 --Buster Blader (Rush)
+160440002 3 --Recurring Nightmare (Rush)
+160440003 3 --Summoned Skull (Rush)
+#######################################
+# Prerelease - Unknown Until 2023-06-23
+# Phoenix of the Roaring Flame
+160014000 3 
+160014001 3 
+160014002 3 
+160014003 3 
+160014004 3 
+160014005 3 
+160014006 3 
+160014007 3 
+160014008 3 
+160014018 3 
+160014019 3 
+160014020 3 
+160014021 3 
+160014022 3 
+160014023 3 
+160014024 3 
+160014025 3 
+160014026 3 
+160014027 3 
+160014028 3 
+160014029 3 
+160014030 3 
+160014031 3 
+160014032 3 
+160014033 3 
+160014034 3 
+160014035 3 
+160014036 3 
+160014037 3 
+160014038 3 
+160014039 3 
+160014040 3 
+160014041 3 
+160014042 3 
+160014043 3 
+160014044 3 
+160014045 3 
+160014046 3 
+160014047 3 
+160014050 3 
+160014051 3 
+160014052 3 
+160014053 3 
+160014054 3 
+160014055 3 
+160014056 3 
+160014057 3 
+160014058 3 
+160014059 3 
+160014060 3 
+160014061 3 
+160014062 3 
+160014063 3 
+160014064 3 
+160014065 3 
+160014066 3 
+# Triple Build Pack: Godbreath Wing
+# 160208007 3 
+# 160208011 3 
+# 160208015 3 
+160208017 3 
+# 160208021 3 
+# 160208023 3 
+160208026 3 
+# 160208028 3 
+160208029 3 
+160208030 3 
+# 160208032 3 
+160208044 3 
+# 160208045 3 
+160208049 3 
+160208050 3 
+# 160208054 3 
+# 160208055 3 
+# 160208056 3 
+160208059 3 
+160208060 3 
+160208061 3 
+# 160208062 3 
+# From Battle Pack 2023 Vol.2
+# 160444001 3 
+# 160444002 3 
+# 160444003 3 
+# 160444004 3 
+# 160444005 3 
+# 160444007 3 
+# 160444009 3 
+# The Tournament Battle July 2023 prize card
+160444004 3 
+#######################################
 # 1 -1
 1 -1
 # Limited
