--- a/lflists/Rush.new.lflist.conf
+++ b/lflists/Rush.new.lflist.conf
@@ -1562,6 +1562,7 @@ $whitelist
 160439008 3 --Soitsu (Rush)
 160439009 3 --Dragon Bird
 160439010 3 --Legendary Sword (Rush)
+160440004 3 --Dragon Tribe Fusion
 160441003 3 --Eternal Galactica Oblivion
 160442001 3 --Ruthless Slash - Megaplunder
 160443001 3 --Sevens Road Magician
